improved video decode&upload implementation
